--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1 style="text-align: center;">Table Biodata</h1>
     <table border="1" style="margin: auto;">
         <tr>
-            <th>Nama</th>
-            <th>Nim</th>
+            <th>Nama / Tempat Tanggal Lahir</th>
+            <th>Nim / Kelas</th>
             <th>IPK Terakhir</th>
         </tr>
         <tr>
-            <td>Siti Nuraida Az Zahra</td>
-            <td>6701201101</td>
+            <td>Siti Nuraida Az Zahra / Surakarta, 30 Juli 2002</td>
+            <td>6701201101 / D3SI-44-01</td>
             <td>3.85</td>
         </tr>
     </table>
