--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <table border="1" style="margin: auto;">
         <tr>
             <th>Nama / Tempat Tanggal Lahir</th>
-            <th>Nim / Kelas</th>
+            <th>Nim / Kelas / Prodi</th>
             <th>IPK Terakhir</th>
+            <th>Dosen Wali</th>
         </tr>
         <tr>
             <td>Siti Nuraida Az Zahra / Surakarta, 30 Juli 2002</td>
-            <td>6701201101 / D3SI-44-01</td>
+            <td>6701201101 / D3SI-44-01 / D3 Sistem Informasi, 
+                Fakultas Ilmu Terapan, Telkom University</td>
             <td>3.85</td>
+            <td>Dedy Rahman Wijaya</td>
         </tr>
     </table>
 </body>
